src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>npsp__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Batch that this Contact was created in.</description>
        <inlineHelpText>lookup to the Batch that this contact was created in.</inlineHelpText>
        <label>Batch</label>
        <referenceTo>npsp__Batch__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Current_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the current Address record for this Contact. NPSP populates the Contact&apos;s Mailing Address field with the street, city, state, and postal code from the current Address record.</description>
        <inlineHelpText>The current Address that the Contact&apos;s mailing fields are filled with.</inlineHelpText>
        <label>Current Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>npsp__Address__c.npsp__Household_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <infoMessage>To see all addresses for the Contact&apos;s household, enter A-* in the search window</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>npsp__Address__c</referenceTo>
        <relationshipLabel>Contacts (Current Address)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the Contact is deceased. When selected, NPSP excludes this Contact from Household Naming (unless this Contact is the only one in the Household) and from standard email and phone lists.</description>
        <inlineHelpText>When selected, this option marks the contact as deceased, and excludes them from household naming, emails, and phone calls.</inlineHelpText>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the Contact does not want your organization to call or email. Use this field to filter out Contacts in email and phone lists. When selected, NPSP excludes this Contact from Opportunity Acknowledgements.</description>
        <inlineHelpText>When selected, this option excludes the contact from emails and phone calls.</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Exclude_from_Household_Formal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, NPSP excludes this Contact from the Household Formal Greeting (set in NPSP Settings | People | Households).</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Formal Greeting.</inlineHelpText>
        <label>Exclude from Household Formal Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Exclude_from_Household_Informal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, NPSP excludes this Contact from the Household Informal Greeting (set in NPSP Settings | People | Households).</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Informal Greeting.</inlineHelpText>
        <label>Exclude from Household Informal Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Exclude_from_Household_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, NPSP excludes this Contact from the Household Name (set in NPSP Settings | People | Households).</description>
        <inlineHelpText>Checking this box will exclude this contact from the Household Name.</inlineHelpText>
        <label>Exclude from Household Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__First_Soft_Credit_Amount__c</fullName>
        <description>The amount of this Contact&apos;s earliest soft credit.</description>
        <inlineHelpText>The amount of the earliest soft credit.</inlineHelpText>
        <label>First Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__First_Soft_Credit_Date__c</fullName>
        <description>The date of this Contact&apos;s earliest soft credit.</description>
        <inlineHelpText>The date of the earliest soft credit.</inlineHelpText>
        <label>First Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__HHId__c</fullName>
        <description>Holds the Id of the Household record (either Household Account, or Household object) this Contact is currently associated with (read only).</description>
        <formula>if(Account.npe01__SYSTEM_AccountType__c==&apos;Household Account&apos;,CASESAFEID(AccountId),CASESAFEID(npo02__Household__c))</formula>
        <inlineHelpText>holds the ID of the current household, whether it is a Household Account, or a Household Object.</inlineHelpText>
        <label>HHId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Largest_Soft_Credit_Amount__c</fullName>
        <description>The amount of this Contact&apos;s largest soft credit.</description>
        <inlineHelpText>The amount of the largest soft credit.</inlineHelpText>
        <label>Largest Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Largest_Soft_Credit_Date__c</fullName>
        <description>The date of this Contact&apos;s largest soft credit.</description>
        <inlineHelpText>The date of the largest soft credit.</inlineHelpText>
        <label>Largest Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Last_Soft_Credit_Amount__c</fullName>
        <description>The amount of this Contact&apos;s most recent soft credit.</description>
        <inlineHelpText>The amount of the most recent soft credit.</inlineHelpText>
        <label>Last Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Last_Soft_Credit_Date__c</fullName>
        <description>The date of this Contact&apos;s most recent soft credit.</description>
        <inlineHelpText>The date of the most recent soft credit.</inlineHelpText>
        <label>Last Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_Last_N_Days__c</fullName>
        <description>The number of soft credits attributed to this Contact that closed in the last N days. The value of N is set in NPSP Settings | Donations | Donor Statistics.</description>
        <inlineHelpText>Total amount for all soft credits that closed in the last N days. The value of N is defined in the NPSP Settings tab.</inlineHelpText>
        <label>Number of Soft Credits Last N Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_Last_Year__c</fullName>
        <description>The number of soft credits attributed to this Contact in the previous calendar year.</description>
        <inlineHelpText>The number of soft credits last year.</inlineHelpText>
        <label>Number of Soft Credits Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_This_Year__c</fullName>
        <description>The number of soft credits attributed to this Contact this calendar year.</description>
        <inlineHelpText>The number of soft credits this year.</inlineHelpText>
        <label>Number of Soft Credits This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_Two_Years_Ago__c</fullName>
        <description>The number of soft credits attributed to this Contact two calendar years ago.</description>
        <inlineHelpText>The number of soft credits 2 years ago.</inlineHelpText>
        <label>Number of Soft Credits Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits__c</fullName>
        <description>The total number of soft credits attributed to this Contact.</description>
        <inlineHelpText>The number of soft credits.</inlineHelpText>
        <label>Number of Soft Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Affiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account marked as Primary in this Contact&apos;s list of Organization Affiliations.</description>
        <inlineHelpText>Used to track the account of the contact&apos;s Organization Affiliation record that is marked primary.</inlineHelpText>
        <label>Primary Affiliation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Do Not Use.  Use Organization Affiliations.</relationshipLabel>
        <relationshipName>PrimaryAffiliatedContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Contact__c</fullName>
        <description>Indicates if this Contact is designated as the Primary Contact on their Account (read only).</description>
        <formula>Account.npe01__One2OneContact__c = Id</formula>
        <inlineHelpText>This is is checked if the user is the Primary Contact on their Account.  The Primary Contact can be edited on the Account.</inlineHelpText>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Soft_Credit_Last_N_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total amount of soft credit attributed to this Contact in the last N days. The value of N is set in NPSP Settings | Donations | Donor Statistics.</description>
        <inlineHelpText>The total amount of Soft Credit, closed in the last number of days defined in NPSP Settings.</inlineHelpText>
        <label>Soft Credit Last N Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__is_Address_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, NPSP will not sync this Contact&apos;s address with the Household Default or Seasonal Address. Use this to maintain a separate Mailing Address for this particular Contact.</description>
        <inlineHelpText>If checked, the Contact&apos;s Current Address lookup overrides the Household&apos;s default Address or seasonal Address.</inlineHelpText>
        <label>Address Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this contact.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this contact.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the search term.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether contact hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Net_Dongle</fullName>
        <active>true</active>
        <label>Net Dongle</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wired_Broadband</fullName>
        <active>true</active>
        <label>Wired Broadband</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>